--- a/templates/post.html
+++ b/templates/post.html
@@ -1,3 +1,5 @@
+{% set page_title = "WonderFloyd  - " ~ post.title %}
+{% set meta_description = post.subtitle %}
 {% include "header.html" %}
 
 <!-- Page Header -->
