--- a/templates/secret-login.html
+++ b/templates/secret-login.html
@@ -1,6 +1,8 @@
+{% set page_title = "WonderFloyd - Admin Login" %}
+{% set meta_description = "Private admin login area for WonderFloyd content management." %}
 {% include "header.html" %}
 
-<header class="masthead" style="background-image: url('/static/assets/img/wf-bg-v4.png')">
+<header class="masthead" style="background-image: url('{{ url_for('static', filename='assets/img/wf-bg-v4.png') }}')">
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-11 col-lg-9 col-xl-9">
