--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,8 @@
+{% set page_title = "WonderFloyd - About" %}
+{% set meta_description = "Learn what WonderFloyd is about, the vision behind it, and meet Nemere, the creator of this science and wonder driven platform." %}
 {% include "header.html" %}
 
-<header class="masthead" style="background-image: url('../static/assets/img/wf-bg-v3.png')">
+<header class="masthead" style="background-image: url('{{ url_for('static', filename='assets/img/wf-bg-v3.png') }}')">
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
