--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,8 @@
+{% set page_title = "WonderFloyd - Contact" %}
+{% set meta_description = "Get in touch with WonderFloyd. Share your thoughts, questions, feedback, or collaboration ideas through the contact form." %}
 {% include "header.html" %}
 
-<header class="masthead" style="background-image: url('../static/assets/img/wf-bg-v2.png')">
+<header class="masthead" style="background-image: url('{{ url_for('static', filename='assets/img/wf-bg-v2.png') }}')">
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
