--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -1,7 +1,13 @@
+{% if is_edit %}
+  {% set page_title = "WonderFloyd - Edit Post" %}
+{% else %}
+  {% set page_title = "WonderFloyd - New Post" %}
+{% endif %}
+{% set meta_description = "Create or edit WonderFloyd articles with rich text, cover images, categories and sources." %}
 {% from "bootstrap5/form.html" import render_field %}
 {% include "header.html" %}
 
-<header class="masthead" style="background-image: url('../static/assets/img/wf-bg-v5.png')">
+<header class="masthead" style="background-image: url('{{ url_for('static', filename='assets/img/wf-bg-v5.png') }}')">
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
