--- a/templates/header.html
+++ b/templates/header.html
@@ -13,6 +13,25 @@
     </title>
     <meta name="description"
           content="{{ meta_description or 'WonderFloyd explores science, consciousness, and the wonders of reality with reliable, informative, and enjoyable content.' }}">
+
+    {# -- Open Graph defaults -- #}
+    {% set og_title = og_title or page_title or "WonderFloyd" %}
+    {% set og_description = og_description or meta_description or "WonderFloyd explores science, consciousness, technology, and the wonders of reality." %}
+    {% set og_image = og_image or url_for('static', filename='assets/img/wf-og-default.png') %}
+    {% set og_type = og_type or 'website' %}
+    {% set og_url = og_url or request.url %}
+
+    <meta property="og:title" content="{{ og_title }}">
+    <meta property="og:description" content="{{ og_description }}">
+    <meta property="og:image" content="{{ og_image }}">
+    <meta property="og:type" content="{{ og_type }}">
+    <meta property="og:url" content="{{ og_url }}">
+
+    {# -- Twitter Card -- #}
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{ og_title }}">
+    <meta name="twitter:description" content="{{ og_description }}">
+    <meta name="twitter:image" content="{{ og_image }}">
     <script>
       (function () {
         // Default = dark
