--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12885,4 +12885,15 @@ html, body { margin: 0; }
   }
 }
 
+.wf-mail-link {
+  color: var(--wf-accent);
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.wf-mail-link:hover {
+  color: var(--wf-accent-hover-end);
+  text-decoration: underline;
+}
+
 
