--- a/templates/terms.html
+++ b/templates/terms.html
@@ -23,6 +23,8 @@
         <section class="py-4">
           <h1 class="mb-4">Terms of Use</h1>
 
+          <p><strong>Last updated:</strong> 2025</p>
+
           <p>
             These Terms of Use govern your access to and use of wonderfloyd.com.
             By browsing or using this website, you agree to these terms. If you do not accept any part of them,
