--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -35,8 +35,12 @@
 
           {{ render_field(form.title) }}
           {{ render_field(form.subtitle) }}
+
           {{ render_field(form.img_url) }}
           {{ render_field(form.cover_image) }}
+
+          {{ render_field(form.reading_time) }}
+
           {{ render_field(form.body) }}
           {{ render_field(form.categories) }}
 
