--- a/templates/post.html
+++ b/templates/post.html
@@ -28,6 +28,34 @@
                data-author="{{ post.author.name }}">{{ post.author.name }}</a>
             on {{ post.date }}
           </span>
+
+          {% if post.reading_time %}
+            <div class="wf-reading-time" aria-label="Estimated reading time">
+              <svg viewBox="0 0 24 24" class="wf-reading-hourglass" aria-hidden="true">
+                <g fill="none" stroke="currentColor" stroke-width="1.5"
+                   stroke-linecap="round" stroke-linejoin="round">
+                  <!-- Top bar -->
+                  <path d="M6 3.5h12c.7 0 1.2.5 1.2 1.2v1c0 .7-.5 1.3-1.2 1.3H6C5.3 7 4.8 6.4 4.8 5.7v-1C4.8 4 5.3 3.5 6 3.5z"/>
+                  <!-- Bottom bar -->
+                  <path d="M6 17h12c.7 0 1.2.5 1.2 1.2v1c0 .7-.5 1.3-1.2 1.3H6c-.7 0-1.2-.6-1.2-1.3v-1C4.8 17.5 5.3 17 6 17z"/>
+                  <!-- Outer glass shape -->
+                  <path d="M8 7.3l4 4.2 4-4.2M8 16.7l4-4.2 4 4.2"/>
+                  <!-- Sand top -->
+                  <path d="M10 8.4h4L12 10.3z"/>
+                  <!-- Sand stream -->
+                  <path d="M12 10.6v2.4"/>
+                  <!-- Sand bottom -->
+                  <path d="M12 13.8l2 2.1h-4z"/>
+                </g>
+              </svg>
+              <span class="wf-reading-text">
+                {{ post.reading_time }} min
+              </span>
+            </div>
+          {% endif %}
+
+
+
         </div>
       </div>
     </div>
