--- a/templates/footer.html
+++ b/templates/footer.html
@@ -32,6 +32,17 @@
               <i class="fab fa-youtube" aria-hidden="true"></i>
             </a>
           </li>
+          <li class="list-inline-item">
+            <a class="wf-social"
+               href="https://x.com/thewonderfloyd"
+               aria-label="X"
+               target="_blank"
+               rel="noopener noreferrer">
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                <path d="M18.244 2H21L14.326 10.01L22 22H15.692L10.864 14.918L5.2 22H2.444L9.48 13.412L2 2H8.424L12.82 8.552L18.244 2ZM17.084 20.332H18.796L7.052 3.568H5.212L17.084 20.332Z"/>
+              </svg>
+            </a>
+          </li>
         </ul>
 
         <div class="text-center text-muted fst-italic mt-2 fs-9">
