--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
       <div class="col-md-11 col-lg-9 col-xl-9">
         <div class="site-heading">
           <h1 class="wf-gradient-text">WonderFloyd</h1>
-          <span class="subheading">Reliable, Informative, Enjoyable</span>
+          <span class="subheading">Explore reality through wonder.</span>
         </div>
       </div>
     </div>
