--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10557,7 +10557,6 @@ hr {
   border-color: #dee2e6;
   opacity: 1;
 }
-
 p {
   margin: 2rem 0;
 }
@@ -10587,6 +10586,8 @@ blockquote {
 .form-floating label {
   color: #6c757d;
 }
+
+/* ======== WONDERFLOYD ======== */
 
 #mainNav {
   position: absolute;
