add version metadata

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10797,7 +10797,7 @@ header.masthead .post-heading .meta a {
 
 
 
-/* ========== WONDERFLOYD ========== */
+/* ================== WONDERFLOYD ================== */
 
 
 /* Flash Message Styling */
