Reorder page titles for SEO optimization

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-{% set page_title = "WonderFloyd - About" %}
+{% set page_title = "About - WonderFloyd" %}
 {% set meta_description = "Learn what WonderFloyd is about, the vision behind it, and meet Nemere, the creator of this science and wonder driven platform." %}
 {% include "header.html" %}
 
