--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,4 @@
-{% set page_title = "WonderFloyd - Contact" %}
+{% set page_title = "Contact - WonderFloyd" %}
 {% set meta_description = "Get in touch with WonderFloyd. Share your thoughts, questions, feedback, or collaboration ideas through the contact form." %}
 {% include "header.html" %}
 
