--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -1,7 +1,7 @@
 {% if is_edit %}
-  {% set page_title = "WonderFloyd - Edit Post" %}
+  {% set page_title = "Edit Post - WonderFloyd" %}
 {% else %}
-  {% set page_title = "WonderFloyd - New Post" %}
+  {% set page_title = "New Post - WonderFloyd" %}
 {% endif %}
 {% set meta_description = "Create or edit WonderFloyd articles with rich text, cover images, categories and sources." %}
 {% from "bootstrap5/form.html" import render_field %}
