--- a/templates/post.html
+++ b/templates/post.html
@@ -1,4 +1,4 @@
-{% set page_title = "WonderFloyd  - " ~ post.title %}
+{% set page_title = post.title ~ " - WonderFloyd" %}
 {% set meta_description = post.subtitle %}
 
 {# Canonical link for this article #}
