--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -1,4 +1,4 @@
-{% set page_title = "WonderFloyd - Privacy Policy" %}
+{% set page_title = "Privacy Policy - WonderFloyd" %}
 {% set meta_description = "Learn how WonderFloyd collects, uses, and protects your personal data." %}
 {% include "header.html" %}
 
