--- a/templates/secret-login.html
+++ b/templates/secret-login.html
@@ -1,4 +1,4 @@
-{% set page_title = "WonderFloyd - Admin Login" %}
+{% set page_title = "Admin Login - WonderFloyd" %}
 {% set meta_description = "Private admin login area for WonderFloyd content management." %}
 {% include "header.html" %}
 
