--- a/templates/terms.html
+++ b/templates/terms.html
@@ -1,4 +1,4 @@
-{% set page_title = "WonderFloyd - Terms of Use" %}
+{% set page_title = "Terms of Use - WonderFloyd" %}
 {% set meta_description = "Information about WonderFloyd's terms of use" %}
 {% include "header.html" %}
 
