--- a/templates/partials/post-list.html
+++ b/templates/partials/post-list.html
@@ -23,7 +23,14 @@
              data-author="{{ post.author.name }}">{{ post.author.name }}</a>
           on {{ post.date }}
           {% if current_user.is_authenticated and current_user.id == 1 %}
-            <a href="{{ url_for('delete_post', post_id=post.id) }}" class="text-danger ms-2" aria-label="Delete post">✘</a>
+            <a
+              href="{{ url_for('delete_post', post_id=post.id) }}"
+              class="text-danger ms-2"
+              aria-label="Delete post"
+              onclick="return confirm('Are you sure you want to delete this post? This action cannot be undone.');"
+            >
+              ✘
+            </a>
           {% endif %}
         </p>
       </div>
