--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,7 @@
         <section id="wonderfloyd" class="py-4">
           <h2 class="mb-4 wf-section-title">About WonderFloyd</h2>
 
-          <p>
+          <p class="first-pg">
             WonderFloyd is a digital space designed for those who never stop asking questions about science, life, technology, and the wonders that connect them all. It is a platform designed to share timeless, engaging, and engrossing ideas with the world. From cosmic mysteries to the hidden patterns of consciousness, we explore the wonders that remind us how connected everything truly is.
           </p>
 
@@ -50,7 +50,7 @@
         <section id="author" class="py-5">
           <h2 class="mb-4 wf-section-title">About Me</h2>
 
-          <p>
+          <p class="first-pg">
             Hey, I'm <strong>Nemere</strong>. I’m the developer, writer, and creator behind WonderFloyd.
           </p>
 
