--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -18,7 +18,7 @@
 <main class="mb-5 wf-static-page">
   <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
-      <div class="col-md-11 col-lg-12 col-xl-9">
+      <div id="privacy-body" class="col-md-11 col-lg-12 col-xl-9">
 
         <section class="py-4">
           <h1 class="mb-4">Privacy Policy</h1>
