--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,7 +7,7 @@
         <ul class="list-inline text-center wf-socials">
           <li class="list-inline-item">
             <a class="wf-social"
-               href="https://www.instagram.com/wonderfloyd.official/"
+               href="https://www.instagram.com/thewonderfloyd"
                aria-label="Instagram"
                target="_blank"
                rel="noopener noreferrer">
