--- a/templates/header.html
+++ b/templates/header.html
@@ -30,6 +30,7 @@
     <meta property="og:image" content="{{ og_image }}">
     <meta property="og:type" content="{{ og_type }}">
     <meta property="og:url" content="{{ og_url }}">
+    <meta property="og:site_name" content="WonderFloyd">
 
     {# -- Twitter Card -- #}
     <meta name="twitter:card" content="summary_large_image">
